<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/gitDp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/profilepic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/author_name"
        android:textColor="@color/repo_name"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/gitDp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gitRepName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/repo_name"
        android:textColor="@color/repo_name"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/gitDp"
        app:layout_constraintTop_toBottomOf="@+id/owner" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandableLayoutNew"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/shimView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gitRepName"
        app:layout_constraintTop_toBottomOf="@+id/gitRepName">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/wisWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:fontFamily="@font/roboto"
                android:text="@string/description"
                android:textColor="@color/repo_name"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/urlRepo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/repo_url"
                android:textColor="@color/repo_name"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/codeColor"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_weight="0.5"
                app:srcCompat="@drawable/language_circle" />

            <TextView
                android:id="@+id/codeLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:padding="0.1dp"
                android:text="@string/language"
                android:textColor="@color/repo_name"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_weight="0.5"
                app:srcCompat="@drawable/star_yellow" />

            <TextView
                android:id="@+id/rStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:padding="0.1dp"
                android:text="@string/stars"
                android:textColor="@color/repo_name"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_weight="0.5"
                app:srcCompat="@drawable/fork" />

            <TextView
                android:id="@+id/rFork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:padding="0.1dp"
                android:text="@string/forks"
                android:textColor="@color/repo_name"
                android:textSize="12dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/shimView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/hr_rule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandableLayoutNew" />
</androidx.constraintlayout.widget.ConstraintLayout>